--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<!--                                              nav                                            -->
 
     <header class="nav-bg">
         <div class="container">
@@ -27,7 +28,7 @@
               <a href="#" class="menu__link">Требования</a>
               <a href="#" class="menu__link">Контакты</a>
               <a href="#" class="menu__link">Оставить заявку</a>
-        </nav>
+            </nav>
           </div>
         </div>
     </header>
@@ -64,6 +65,8 @@
             </div>
           </div>
       </section>
+
+<!--                                              reasons                                            -->
 
       <section class="reasons">
         <div class="container">
@@ -164,6 +167,8 @@
         </div>
       </section>
 
+<!--                                              mobile-app                                            -->
+
       <section class="mobile-app">
         <div class="container">
           <div class="row">
@@ -224,6 +229,8 @@
         </div>
       </section>
 
+<!--                                              choice                                            -->
+
       <section class="choice">
         <div class="choice__bg-black"></div>
         <div class="choice__bg-img"></div>
@@ -237,6 +244,8 @@
           </div>
         </div>
       </section>
+
+<!--                                              requirements                                            -->
 
       <section class="requirements">
         <div class="container">
@@ -290,6 +299,8 @@
         </div>
       </section>
 
+<!--                                              world                                            -->
+
       <section class="world">
           <div class="container">
             <div class="world__item">
@@ -304,38 +315,46 @@
       </section>
     </main>
 
+<!--                                              footer                                            -->
+
     <footer class="footer">
-      <div class="footer__icons">
-        <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
-        <div class="icon"><i class="fa-brands fa-twitter"></i></div>
-        <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
-        <div class="icon"><i class="fa-brands fa-instagram"></i></div>
-      </div>
-      <div class="footer__nav position-absolute top-50 start-50 translate-middle">
-        <div class="nav-strip"></div>
-        <div class="nav-row">
-          <p>на главную</p>
-          <p>города</p>
-          <p>для водителей</p>
+      <div class="nav-strip"></div>
+      <div class="footer-grid">
+        <div class="footer__icons">
+          <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+          <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+          <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+          <div class="icon"><i class="fa-brands fa-instagram"></i></div>
         </div>
-        <div class="nav-row--small">
-          <p>центр поддержки</p>
-          <p>вакансии</p>
-          <p>разработчики</p>
-          <p>блог</p>
-          <p>о нас</p>
+        <!--  position-absolute top-50 start-50 translate-middle -->
+        <div class="footer__nav">
+          <div class="nav-row">
+            <p>на главную</p>
+            <p>города</p>
+            <p>для водителей</p>
+          </div>
+          <div class="nav-row--small">
+            <p>центр поддержки</p>
+            <p>вакансии</p>
+            <p>разработчики</p>
+            <p>блог</p>
+            <p>о нас</p>
+          </div>
+          <p class="nav-row--rus">русский</p>
         </div>
-        <p class="nav-row--rus">русский</p>
-      </div>
-      <div class="footer__app">
-        <img src="./img/svg/app.svg" alt="">
+        <div class="footer__app">
+          <img class="footer__img" src="./img/svg/app.svg" alt="" height="27" width="296">
+        </div>
       </div>
     </footer>
+
+<!--                                              scripts                                            -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/c0eb6ba25e.js" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
