--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,17 @@
 </head>
 
 <body>
-<!--                                              nav                                            -->
+<!--                                             section ///[nav]                                            -->
 
-    <header class="nav-bg">
+    <header class="navigation-bg">
         <div class="container">
           <div class="row">
-            <nav class="navigation d-flex justify-content-center align-items-center">
+            <div class="menu-bar" id="menu-bar" onclick="menuOnClick()">
+              <div id="bar1" class="bar"></div>
+              <div id="bar2" class="bar"></div>
+              <div id="bar3" class="bar"></div>
+            </div>
+            <nav class="navigation-menu flex-menu">
               <a href="#" class="menu__link">Главная</a>
               <a href="#" class="menu__link">Со своим автомобилем</a>
               <a href="#" class="menu__link">На автомобиле компании</a>
@@ -60,13 +65,13 @@
                 <h1 class="heading__h1">КОМПАНИЯ UBER PARTNERS!</h1>
                 <h2 class="heading__h2">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
                 <span class="heading__txt">Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний. Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система. По-мимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.<br><br> Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.</span>
-                <button class="heading__button" type="button">ОТПРАВИТЬ ЗАЯВКУ!</button>
               </div>
+              <button class="heading__button" type="button">ОТПРАВИТЬ ЗАЯВКУ!</button>
             </div>
           </div>
       </section>
 
-<!--                                              reasons                                            -->
+<!--                                             section ///[reasons]                                            -->
 
       <section class="reasons">
         <div class="container">
@@ -167,7 +172,7 @@
         </div>
       </section>
 
-<!--                                              mobile-app                                            -->
+<!--                                             section ///[mobile-app]                                            -->
 
       <section class="mobile-app">
         <div class="container">
@@ -229,7 +234,7 @@
         </div>
       </section>
 
-<!--                                              choice                                            -->
+<!--                                             section ///[choice]                                            -->
 
       <section class="choice">
         <div class="choice__bg-black"></div>
@@ -245,7 +250,7 @@
         </div>
       </section>
 
-<!--                                              requirements                                            -->
+<!--                                             section ///[requirements]                                            -->
 
       <section class="requirements">
         <div class="container">
@@ -299,7 +304,7 @@
         </div>
       </section>
 
-<!--                                              world                                            -->
+<!--                                             section ///[world]                                            -->
 
       <section class="world">
           <div class="container">
@@ -315,7 +320,7 @@
       </section>
     </main>
 
-<!--                                              footer                                            -->
+<!--                                             section ///[footer]                                            -->
 
     <footer class="footer">
       <div class="nav-strip"></div>
@@ -348,13 +353,13 @@
       </div>
     </footer>
 
-<!--                                              scripts                                            -->
+<!--                                             section /// [scripts]                                            -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/c0eb6ba25e.js" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/index.js"></script>
 
 </body>
 
